# orbiscreen

./: .editorconfig  .gitattributes  .gitignore  BRANCH_PROTECTION.md  CHANGELOG.md  Cargo.toml  README.md  README_AR.md  SECURITY.md  SECURITY_AR.md  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: android.yml  ci.yml  release.yml
admin/: apply-branch-protection.sh  branch-protection.json
clients/android/: build.gradle.kts  gradlew  settings.gradle.kts
clients/android/app/: build.gradle.kts  orbiscreen-release.keystore  proguard-rules.pro
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/com/orbiscreen/android/: MainActivity.kt
clients/android/app/src/main/res/layout/: activity_main.xml
clients/android/app/src/main/res/values/: strings.xml  themes.xml
clients/web/: app.js  index.html  style.css
crates/orbiscreen-capture/: Cargo.toml
crates/orbiscreen-capture/src/: lib.rs  wayland.rs  x11.rs
crates/orbiscreen-core/: Cargo.toml
crates/orbiscreen-core/src/: lib.rs
crates/orbiscreen-daemon/: Cargo.toml
crates/orbiscreen-daemon/src/: dbus.rs  main.rs
crates/orbiscreen-display/: Cargo.toml
crates/orbiscreen-display/src/: lib.rs
crates/orbiscreen-encode/: Cargo.toml
crates/orbiscreen-encode/src/: lib.rs
crates/orbiscreen-gtk/: Cargo.toml
crates/orbiscreen-gtk/src/: main.rs
crates/orbiscreen-input/: Cargo.toml
crates/orbiscreen-input/src/: lib.rs  wayland.rs  x11.rs
crates/orbiscreen-transport/: Cargo.toml
crates/orbiscreen-transport/src/: adb.rs  lib.rs  mdns.rs
data/: com.orbiscreen.OrbiscreenGtk.desktop  orbiscreen.spec
docs/: ARCHITECTURE.md  ARCHITECTURE_AR.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_AR.md  DBUS_SPEC.md  DBUS_SPEC_AR.md  PACKAGING.md  PACKAGING_AR.md  TROUBLESHOOTING.md  TROUBLESHOOTING_AR.md
packaging/appimage/: build-appimage.sh
packaging/debian/: build-deb.sh  control
packaging/flatpak/: io.github.shadow-x78.orbiscreen.json
scripts/: install.sh  package-appimage.sh  package-deb.sh  package-rpm.sh  setup-dev-env.sh  test-evdi.sh
