[workspace]
resolver = "2"
members = [
    "crates/orbiscreen-core",
    "crates/orbiscreen-display",
    "crates/orbiscreen-capture",
    "crates/orbiscreen-encode",
    "crates/orbiscreen-input",
    "crates/orbiscreen-transport",
    "crates/orbiscreen-daemon",
    "crates/orbiscreen-gtk",
]

[workspace.package]
version = "0.4.1"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
authors = ["shadow-x78"]
repository = "https://github.com/shadow-x78/orbiscreen"
homepage = "https://github.com/shadow-x78/orbiscreen"
description = "Open-source virtual secondary displays for Linux, streamed to Android over Wi-Fi or USB"
readme = "README.md"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
thiserror = "2"

evdi = "0.8"
evdi-sys = "0.4"
libc = "0.2"

x11rb = { version = "0.14", features = ["allow-unsafe-code"] }
ashpd = { version = "0.13", features = ["backend", "tokio", "screencast", "remote_desktop"] }
evdevil = "0.5"
enumflags2 = "0.7"

gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"

webrtc = "0.20.0-rc.3"
mdns-sd = "0.20"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["full"] }

clap = { version = "4", features = ["derive"] }
hostname = "0.4"
nix = { version = "0.29", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "5", features = ["tokio"] }
gtk4 = "0.9"
libadwaita = "0.7"

[workspace.lints.rust]
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1