[package]
name = "orbiscreen-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Screen capture for X11 (x11rb) and Wayland (ashpd + PipeWire)"

[lints]
workspace = true

[dependencies]
x11rb = { workspace = true }
ashpd = { workspace = true }
enumflags2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }