[package]
name = "orbiscreen-display"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Virtual display creation via DisplayLink evdi"

[lints]
workspace = true

[dependencies]
evdi = { workspace = true }
evdi-sys = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }