[package]
name = "orbiscreen-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebRTC streaming, signaling, and mDNS host discovery"

[lints]
workspace = true

[dependencies]
webrtc = { workspace = true }
mdns-sd = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
hostname = { workspace = true }
orbiscreen-input = { path = "../orbiscreen-input" }
tokio-stream = { version = "0.1", features = ["sync"] }